[gd_scene load_steps=2 format=3 uid="uid://indfdksvoxxx"]

[ext_resource type="Script" path="res://PartNode.gd" id="1_qo4nx"]

[node name="PartNode" type="Node2D"]
script = ExtResource("1_qo4nx")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]

[node name="Sprite2D" type="Sprite2D" parent="."]

[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
